[package]
name = "HEUTL"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.33.0"
serde = "1.0.225"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["migrate", "runtime-tokio", "sqlite", "time"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v7"] }
zen-engine = "0.51.0"
