[package]
name = "HEUTL"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"
futures = "0.3.31"
jsonschema = "0.33.0"
pubsub-bus = "3.1.0"
reqwest = "0.12.23"
serde = "1.0.225"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["migrate", "runtime-tokio", "sqlite", "time"] }
sysinfo = "0.36.1"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v7"] }
zen-engine = "0.51.0"
